--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "sed -i '$s/}/,\"browser\":{\"fs\":\"react-native-level-fs\"}}/' node_modules/olm/package.json"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@rn-matrix/core": "^0.0.32",
+    "node-libs-react-native": "^1.2.1",
+    "observable-hooks": "^3.1.2",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-localize": "^2.0.2",
+    "react-native-randombytes": "^3.6.0",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
