--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@rn-matrix/core": "^0.0.32",
+    "@rn-matrix/ui": "^0.0.13",
     "node-libs-react-native": "^1.2.1",
     "observable-hooks": "^3.1.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-fs": "^2.16.6",
     "react-native-localize": "^2.0.2",
     "react-native-randombytes": "^3.6.0",
     "rxjs": "^6.6.3"
