--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-fs": "^2.16.6",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-localize": "^2.0.2",
     "react-native-randombytes": "^3.6.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
